added initial layout, methods and intents
*added 6 activities
*added 6 layouts
*added basic styles
*need to refactor and improve on all items above
*rudimentary MVP exists
modified:   app/src/main/AndroidManifest.xml
modified:   app/src/main/java/com/example/android/musicalstructure/MainActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/NowPlayingActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/PreferencesActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/RecommendationsActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/TicketsActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/TrendingActivity.java
modified:   app/src/main/res/layout/activity_main.xml
new file:   app/src/main/res/layout/activity_now_playing.xml
new file:   app/src/main/res/layout/activity_preferences.xml
new file:   app/src/main/res/layout/activity_recommedations.xml
new file:   app/src/main/res/layout/activity_tickets.xml
new file:   app/src/main/res/layout/activity_trending.xml
modified:   app/src/main/res/values/colors.xml
new file:   app/src/main/res/values/dimens.xml/dimens.xml
modified:   app/src/main/res/values/strings.xml
modified:   app/src/main/res/values/styles.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,46 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".NowPlayingActivity"
+            android:label="Now Playing"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity
+            android:name=".PreferencesActivity"
+            android:label="Your Preferences"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity
+            android:name=".RecommendationsActivity"
+            android:label="Recommeded Songs"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity
+            android:name=".TrendingActivity"
+            android:label="Trending Songs"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".TicketsActivity"
+            android:label="Purchase Show Tickets"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
